--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
         "rtconner/laravel-tagging": "~2.2",
         "laravelcollective/html": "^5.3.0",
 	  	"watson/bootstrap-form": "1.1.*",
-        "barryvdh/laravel-ide-helper": "^2.3"
+        "barryvdh/laravel-ide-helper": "^2.3",
+        "fzaninotto/faker": "^1.6"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7",
         "symfony/css-selector": "3.1.*",
