--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,10 @@
         "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
+
+      "files": [
+        "app/Bibliotecas/Geral.php" 
+    ],
         "classmap": [
             "database"
         ],
