--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
 	  	"watson/bootstrap-form": "1.1.*",
         "barryvdh/laravel-ide-helper": "^2.3",
         "fzaninotto/faker": "^1.6",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "barryvdh/laravel-dompdf": "^0.8.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
