--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "gulp": "^3.9.1",
     "inputmask": "^3.3.6",
     "laravel-elixir": "^5.0.0"
+  },
+  "dependencies": {
+    "animate.css": "^3.5.2"
   }
 }
