--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "laravel-elixir": "^5.0.0"
   },
   "dependencies": {
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "sweetalert2": "^7.20.7"
   }
 }
