--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.22.2",
     "pnotify": "^4.0.0-alpha.4",
     "sweetalert2": "^7.27.0",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.0.1"
   }
 }
