--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "yarn": "^1.10.0"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "gentelella": "^1.4.0",
+    "graceful-fs": "^4.1.15",
     "inputmask": "^4.0.2",
     "jquery-mask-plugin": "^1.14.15",
+    "minimatch": "^3.0.4",
     "moment": "^2.22.2",
+    "nodemailer": "^4.7.0",
     "pnotify": "^4.0.0-alpha.4",
     "sweetalert2": "^7.27.0",
     "vuex": "^3.0.1"
