--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   },
   "devDependencies": {
     "axios": "^0.17",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "cross-env": "^5.1",
-    "jquery": "^3.2",
+    "jquery": "^3.4.1",
     "laravel-mix": "^2.1.14",
-    "less": "^3.0.1",
+    "less": "^3.10.2",
     "less-loader": "^4.0.5",
-    "lodash": "^4.17.11",
-    "popper.js": "^1.12",
-    "vue": "^2.5.17",
-    "vue-template-compiler": "^2.5.7",
-    "yarn": "^1.10.0"
+    "lodash": "^4.17.15",
+    "popper.js": "^1.15.0",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10",
+    "yarn": "^1.17.3"
   },
   "dependencies": {
     "gentelella": "^1.4.0",
-    "inputmask": "^4.0.2",
-    "jquery-mask-plugin": "^1.14.15",
-    "moment": "^2.22.2",
-    "pnotify": "^4.0.0-alpha.4",
-    "sweetalert2": "^7.27.0",
+    "inputmask": "^4.0.8",
+    "jquery-mask-plugin": "^1.14.16",
+    "moment": "^2.24.0",
+    "pnotify": "^4.0.0",
+    "sweetalert2": "^7.33.1",
     "vue-the-mask": "^0.11.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.1"
   }
 }
